[gd_scene load_steps=13 format=3 uid="uid://c12237pkckka3"]

[ext_resource type="Texture2D" uid="uid://b3qus4msbewf3" path="res://assets/sprites/slime_green.png" id="1_4qdpu"]
[ext_resource type="Script" path="res://scripts/enemies/green_slime.gd" id="1_nx6cd"]
[ext_resource type="PackedScene" uid="uid://dbssua4ob4uoo" path="res://scenes/world/kill_zone.tscn" id="2_yu07v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jjhe8"]
atlas = ExtResource("1_4qdpu")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgwm4"]
atlas = ExtResource("1_4qdpu")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgn44"]
atlas = ExtResource("1_4qdpu")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm7j3"]
atlas = ExtResource("1_4qdpu")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qmsa"]
atlas = ExtResource("1_4qdpu")
region = Rect2(48, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_pih16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjhe8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgwm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgn44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm7j3")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qmsa")
}],
"loop": true,
"name": &"stunned",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sv41y"]
size = Vector2(10, 12)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0644"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cg4b"]
bg_color = Color(0.460347, 0.460347, 0.460347, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="GreenSlime" type="Node2D"]
script = ExtResource("1_nx6cd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_pih16")
autoplay = "default"

[node name="Killzone" parent="." instance=ExtResource("2_yu07v")]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_sv41y")

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-9, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(9, 0)

[node name="StunTimer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(20, 4)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -21.0
offset_right = 10.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_e0644")
theme_override_styles/fill = SubResource("StyleBoxFlat_7cg4b")
show_percentage = false

[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
